--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- TODO: Same as description above -->
   <meta property="og:description" content="Personalized Accessibility Scans of Built Environments">
   <!-- TODO: Replace with your actual website URL -->
-  <meta property="og:url" content="https://YOUR_DOMAIN.com/YOUR_PROJECT_PAGE">
+  <meta property="og:url" content="https://hilab-open-source.github.io/accessibility-scout/">
   <!-- TODO: Create a 1200x630px preview image and update path -->
   <meta property="og:image" content="static/images/social_preview.png">
   <meta property="og:image:width" content="2680">
@@ -155,7 +155,7 @@
       "@type": "Organization",
       "name": "ACAM UIST 2025"
     },
-    "url": "https://YOUR_DOMAIN.com/YOUR_PROJECT_PAGE",
+    "url": "https://hilab-open-source.github.io/accessibility-scout/",
     "image": "static/images/social_preview.png",
     "keywords": ["Accessibility", "Large Language Models", "Accessibility Assessment", "Personalization", "Computer Vision", "AI", "Machine Learning"],
     "abstract": "Assessing the accessibility of unfamiliar built environments is critical for people with disabilities. However, manual assessments, performed by users or their personal health professionals, are laborious and unscalable, while automatic machine learning methods often neglect an individual user's unique needs. Recent advances in Large Language Models (LLMs) enable novel approaches to this problem, balancing personalization with scalability to enable more adaptive and context-aware assessments of accessibility. We present Accessibility Scout, an LLM-based accessibility scanning system that identifies accessibility concerns from photos of built environments. With use, Accessibility Scout becomes an increasingly capable "accessibility scout", tailoring accessibility scans to an individual's mobility level, preferences, and specific environmental interests through collaborative Human-AI assessments. We present findings from three studies: a formative study with six participants to inform the design of Accessibility Scout, a technical evaluation of 500 images of built environments, and a user study with 10 participants of varying mobility. Results from our technical evaluation and user study show that Accessibility Scout can generate personalized accessibility scans that extend beyond traditional ADA considerations. Finally, we conclude with a discussion on the implications of our work and future steps for building more scalable and personalized accessibility assessments of the physical world. ",
@@ -275,11 +275,11 @@
             <div class="is-size-5 publication-authors">
               <!-- TODO: Replace with your paper authors and their personal links -->
               <span class="author-block">
-                <a href="whuang37.github.io" target="_blank">William Huang</a><sup>*</sup>,</span>
+                <a href="whuang37.github.io" target="_blank">William Huang</a>,</span>
                 <span class="author-block">
-                  <a href="xiasu.github.io" target="_blank">Xia Su</a><sup>*</sup>,</span>
+                  <a href="xiasu.github.io" target="_blank">Xia Su</a>,</span>
                   <span class="author-block">
-                    <a href="jonfroehlich.github.io" target="_blank">Jon E. Froehlich</a>
+                    <a href="jonfroehlich.github.io" target="_blank">Jon E. Froehlich</a>,</span>
                     <span class="author-block">
                       <a href="yangzhang.dev" target="_blank">Yang Zhang</a>
                     </span>
@@ -316,7 +316,7 @@
 
                   <!-- TODO: Replace with your GitHub repository URL -->
                   <span class="link-block">
-                    <a href="https://github.com/YOUR REPO HERE" target="_blank"
+                    <a href="https://github.com/hilab-open-source/accessibility-scout" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
