--- a/index.html
+++ b/index.html
@@ -159,19 +159,20 @@
     "image": "static/images/social_preview.png",
     "keywords": ["Accessibility", "Large Language Models", "Accessibility Assessment", "Personalization", "Computer Vision", "AI", "Machine Learning"],
     "abstract": "Assessing the accessibility of unfamiliar built environments is critical for people with disabilities. However, manual assessments, performed by users or their personal health professionals, are laborious and unscalable, while automatic machine learning methods often neglect an individual user's unique needs. Recent advances in Large Language Models (LLMs) enable novel approaches to this problem, balancing personalization with scalability to enable more adaptive and context-aware assessments of accessibility. We present Accessibility Scout, an LLM-based accessibility scanning system that identifies accessibility concerns from photos of built environments. With use, Accessibility Scout becomes an increasingly capable "accessibility scout", tailoring accessibility scans to an individual's mobility level, preferences, and specific environmental interests through collaborative Human-AI assessments. We present findings from three studies: a formative study with six participants to inform the design of Accessibility Scout, a technical evaluation of 500 images of built environments, and a user study with 10 participants of varying mobility. Results from our technical evaluation and user study show that Accessibility Scout can generate personalized accessibility scans that extend beyond traditional ADA considerations. Finally, we conclude with a discussion on the implications of our work and future steps for building more scalable and personalized accessibility assessments of the physical world. ",
-    "citation": "@misc{huangAccessibilityScoutPersonalized2025,
-  title = {Accessibility {{Scout}}: {{Personalized Accessibility Scans}} of {{Built Environments}}},
-  shorttitle = {Accessibility {{Scout}}},
-  author = {Huang, William and Su, Xia and Froehlich, Jon E. and Zhang, Yang},
-  year = {2025},
-  month = jul,
-  eprint = {2507.23190},
-  primaryclass = {cs},
-  doi = {10.1145/3746059.3747624},
-  urldate = {2025-09-12},
-  archiveprefix = {arXiv},
-  copyright = {All rights reserved},
-  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computer Vision and Pattern Recognition,Computer Science - Human-Computer Interaction,Computer Science - Multiagent Systems}
+    "citation": "@inproceedings{HuangAccessibilityScout2025,
+    author = {Huang, William and Su, Xia and Froehlich, Jon E. and Zhang, Yang},
+    title = {Accessibility Scout: Personalized Accessibility Scans of Built Environments},
+    year = {2025},
+    isbn = {9798400720376},
+    publisher = {Association for Computing Machinery},
+    address = {New York, NY, USA},
+    url = {https://doi.org/10.1145/3746059.3747624},
+    doi = {10.1145/3746059.3747624},
+    booktitle = {Proceedings of the 38th Annual ACM Symposium on User Interface Software and Technology},
+    articleno = {183},
+    numpages = {18},
+    keywords = {Accessibility; Large Language Model; Accessibility Assessment; Personalization; Computer Vision},
+    series = {UIST '25}
 }
 ",
     "isAccessibleForFree": true,
@@ -294,7 +295,7 @@
                     <div class="publication-links">
                          <!-- TODO: Update with your arXiv paper ID -->
                       <span class="link-block">
-                        <a href="https://www.arxiv.org/pdf/2507.23190" target="_blank"
+                        <a href="https://dl.acm.org/doi/10.1145/3746059.3747624" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
