--- a/index.html
+++ b/index.html
@@ -276,13 +276,13 @@
             <div class="is-size-5 publication-authors">
               <!-- TODO: Replace with your paper authors and their personal links -->
               <span class="author-block">
-                <a href="whuang37.github.io" target="_blank">William Huang</a>,</span>
+                <a href="https://whuang37.github.io" target="_blank">William Huang</a>,</span>
                 <span class="author-block">
-                  <a href="xiasu.github.io" target="_blank">Xia Su</a>,</span>
+                  <a href="https://xiasu.github.io" target="_blank">Xia Su</a>,</span>
                   <span class="author-block">
-                    <a href="jonfroehlich.github.io" target="_blank">Jon E. Froehlich</a>,</span>
+                    <a href="https://jonfroehlich.github.io" target="_blank">Jon E. Froehlich</a>,</span>
                     <span class="author-block">
-                      <a href="yangzhang.dev" target="_blank">Yang Zhang</a>
+                      <a href="https://yangzhang.dev" target="_blank">Yang Zhang</a>
                     </span>
                   </div>
 
